--- a/market.ui
+++ b/market.ui
@@ -36,7 +36,7 @@
      <enum>Qt::RightToLeft</enum>
     </property>
     <property name="currentIndex">
-     <number>6</number>
+     <number>3</number>
     </property>
     <property name="elideMode">
      <enum>Qt::ElideNone</enum>
@@ -2184,7 +2184,7 @@
           </font>
          </property>
          <property name="text">
-          <string>الحد الأدنى</string>
+          <string>سعر الشراء</string>
          </property>
         </widget>
         <widget class="QLabel" name="label_34">
@@ -2352,9 +2352,9 @@
         <widget class="QLabel" name="label_40">
          <property name="geometry">
           <rect>
-           <x>250</x>
+           <x>240</x>
            <y>30</y>
-           <width>41</width>
+           <width>51</width>
            <height>20</height>
           </rect>
          </property>
@@ -2364,7 +2364,7 @@
           </font>
          </property>
          <property name="text">
-          <string>السعر</string>
+          <string>سعر البيع</string>
          </property>
         </widget>
         <widget class="QLabel" name="label_41">
@@ -2388,9 +2388,9 @@
         <widget class="QLabel" name="label_42">
          <property name="geometry">
           <rect>
-           <x>750</x>
+           <x>730</x>
            <y>196</y>
-           <width>41</width>
+           <width>61</width>
            <height>20</height>
           </rect>
          </property>
@@ -2400,7 +2400,7 @@
           </font>
          </property>
          <property name="text">
-          <string>الــرف</string>
+          <string>الرف</string>
          </property>
         </widget>
         <widget class="QLineEdit" name="lineEdit_30">
@@ -2539,11 +2539,6 @@
         </property>
         <column>
          <property name="text">
-          <string>رقم  الصنف</string>
-         </property>
-        </column>
-        <column>
-         <property name="text">
           <string>إسم الصنف</string>
          </property>
         </column>
@@ -2580,21 +2575,6 @@
         <column>
          <property name="text">
           <string>سعر الجمهور</string>
-         </property>
-        </column>
-        <column>
-         <property name="text">
-          <string>إجمالي الشراء</string>
-         </property>
-        </column>
-        <column>
-         <property name="text">
-          <string>إجمالي البيع</string>
-         </property>
-        </column>
-        <column>
-         <property name="text">
-          <string>الربح</string>
          </property>
         </column>
        </widget>
