--- a/market.ui
+++ b/market.ui
@@ -7950,18 +7950,23 @@
          <rect>
           <x>70</x>
           <y>330</y>
-          <width>801</width>
+          <width>961</width>
           <height>192</height>
          </rect>
         </property>
         <column>
          <property name="text">
-          <string>اسم الصنف</string>
+          <string>رقم الطلب</string>
          </property>
         </column>
         <column>
          <property name="text">
           <string>الباركود</string>
+         </property>
+        </column>
+        <column>
+         <property name="text">
+          <string>اسم الصنف</string>
          </property>
         </column>
         <column>
@@ -8067,7 +8072,7 @@
           </font>
          </property>
          <property name="text">
-          <string>رقم فاتورة العميل</string>
+          <string>رقم طلب العميل</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -8386,7 +8391,7 @@
           </font>
          </property>
          <property name="alignment">
-          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+          <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
          </property>
         </widget>
         <widget class="QLabel" name="label_157">
