--- a/market.ui
+++ b/market.ui
@@ -4448,7 +4448,7 @@
          </rect>
         </property>
         <property name="currentIndex">
-         <number>2</number>
+         <number>0</number>
         </property>
         <widget class="QWidget" name="tab_12">
          <attribute name="title">
@@ -4500,6 +4500,11 @@
           </column>
           <column>
            <property name="text">
+            <string>رقم فاتورة المورد</string>
+           </property>
+          </column>
+          <column>
+           <property name="text">
             <string>اسم الموظف</string>
            </property>
           </column>
@@ -4537,7 +4542,7 @@
          <widget class="QLabel" name="label_71">
           <property name="geometry">
            <rect>
-            <x>895</x>
+            <x>855</x>
             <y>34</y>
             <width>48</width>
             <height>19</height>
@@ -4655,8 +4660,8 @@
          <widget class="QLabel" name="label_74">
           <property name="geometry">
            <rect>
-            <x>880</x>
-            <y>64</y>
+            <x>855</x>
+            <y>65</y>
             <width>62</width>
             <height>19</height>
            </rect>
@@ -4718,10 +4723,10 @@
          <widget class="QLabel" name="label_75">
           <property name="geometry">
            <rect>
-            <x>854</x>
-            <y>94</y>
-            <width>91</width>
-            <height>20</height>
+            <x>855</x>
+            <y>95</y>
+            <width>86</width>
+            <height>19</height>
            </rect>
           </property>
           <property name="font">
@@ -4798,7 +4803,7 @@
            <rect>
             <x>20</x>
             <y>125</y>
-            <width>171</width>
+            <width>141</width>
             <height>26</height>
            </rect>
           </property>
@@ -5138,7 +5143,7 @@
           <property name="geometry">
            <rect>
             <x>680</x>
-            <y>120</y>
+            <y>150</y>
             <width>171</width>
             <height>26</height>
            </rect>
@@ -5155,9 +5160,9 @@
          <widget class="QLabel" name="label_78">
           <property name="geometry">
            <rect>
-            <x>880</x>
-            <y>124</y>
-            <width>65</width>
+            <x>855</x>
+            <y>154</y>
+            <width>39</width>
             <height>19</height>
            </rect>
           </property>
@@ -5180,7 +5185,7 @@
           <property name="geometry">
            <rect>
             <x>680</x>
-            <y>150</y>
+            <y>180</y>
             <width>171</width>
             <height>26</height>
            </rect>
@@ -5197,9 +5202,9 @@
          <widget class="QLabel" name="label_79">
           <property name="geometry">
            <rect>
-            <x>880</x>
-            <y>154</y>
-            <width>65</width>
+            <x>855</x>
+            <y>184</y>
+            <width>31</width>
             <height>19</height>
            </rect>
           </property>
@@ -5213,6 +5218,48 @@
           </property>
           <property name="alignment">
            <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+          </property>
+         </widget>
+         <widget class="QLineEdit" name="lineEdit_51">
+          <property name="enabled">
+           <bool>true</bool>
+          </property>
+          <property name="geometry">
+           <rect>
+            <x>680</x>
+            <y>120</y>
+            <width>171</width>
+            <height>26</height>
+           </rect>
+          </property>
+          <property name="font">
+           <font>
+            <pointsize>14</pointsize>
+           </font>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+          </property>
+         </widget>
+         <widget class="QLabel" name="label_76">
+          <property name="geometry">
+           <rect>
+            <x>855</x>
+            <y>124</y>
+            <width>57</width>
+            <height>19</height>
+           </rect>
+          </property>
+          <property name="font">
+           <font>
+            <pointsize>10</pointsize>
+           </font>
+          </property>
+          <property name="text">
+           <string>رصيد المورد</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
           </property>
          </widget>
         </widget>
@@ -5700,7 +5747,7 @@
          </widget>
          <widget class="QPushButton" name="pushButton_34">
           <property name="enabled">
-           <bool>false</bool>
+           <bool>true</bool>
           </property>
           <property name="geometry">
            <rect>
@@ -5712,11 +5759,11 @@
           </property>
           <property name="font">
            <font>
-            <pointsize>16</pointsize>
+            <pointsize>12</pointsize>
            </font>
           </property>
           <property name="text">
-           <string>حـــــفط</string>
+           <string>تنظيف الحقول</string>
           </property>
          </widget>
          <widget class="QPushButton" name="pushButton_36">
