--- a/market.ui
+++ b/market.ui
@@ -10,11 +10,18 @@
     <height>629</height>
    </rect>
   </property>
+  <property name="font">
+   <font>
+    <pointsize>18</pointsize>
+    <weight>75</weight>
+    <bold>true</bold>
+   </font>
+  </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>super market</string>
   </property>
   <property name="layoutDirection">
-   <enum>Qt::LeftToRight</enum>
+   <enum>Qt::RightToLeft</enum>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QHBoxLayout" name="horizontalLayout_2">
@@ -33,7 +40,7 @@
        <enum>Qt::RightToLeft</enum>
       </property>
       <property name="currentIndex">
-       <number>5</number>
+       <number>3</number>
       </property>
       <property name="elideMode">
        <enum>Qt::ElideNone</enum>
@@ -1930,11 +1937,11 @@
           <x>8</x>
           <y>-3</y>
           <width>971</width>
-          <height>501</height>
+          <height>531</height>
          </rect>
         </property>
         <property name="currentIndex">
-         <number>2</number>
+         <number>1</number>
         </property>
         <property name="documentMode">
          <bool>false</bool>
@@ -1947,9 +1954,9 @@
           <property name="geometry">
            <rect>
             <x>850</x>
-            <y>20</y>
+            <y>10</y>
             <width>101</width>
-            <height>211</height>
+            <height>221</height>
            </rect>
           </property>
           <property name="font">
@@ -1972,10 +1979,10 @@
            </property>
            <property name="geometry">
             <rect>
-             <x>12</x>
-             <y>50</y>
+             <x>14</x>
+             <y>41</y>
              <width>75</width>
-             <height>23</height>
+             <height>35</height>
             </rect>
            </property>
            <property name="text">
@@ -1988,10 +1995,10 @@
            </property>
            <property name="geometry">
             <rect>
-             <x>12</x>
-             <y>90</y>
+             <x>14</x>
+             <y>82</y>
              <width>75</width>
-             <height>23</height>
+             <height>35</height>
             </rect>
            </property>
            <property name="text">
@@ -2004,10 +2011,10 @@
            </property>
            <property name="geometry">
             <rect>
-             <x>12</x>
-             <y>130</y>
+             <x>14</x>
+             <y>123</y>
              <width>75</width>
-             <height>23</height>
+             <height>35</height>
             </rect>
            </property>
            <property name="text">
@@ -2020,10 +2027,10 @@
            </property>
            <property name="geometry">
             <rect>
-             <x>12</x>
-             <y>170</y>
+             <x>14</x>
+             <y>164</y>
              <width>75</width>
-             <height>23</height>
+             <height>35</height>
             </rect>
            </property>
            <property name="text">
@@ -2063,9 +2070,9 @@
           <property name="geometry">
            <rect>
             <x>10</x>
-            <y>0</y>
+            <y>10</y>
             <width>821</width>
-            <height>231</height>
+            <height>221</height>
            </rect>
           </property>
           <property name="font">
@@ -2088,10 +2095,10 @@
            </property>
            <property name="geometry">
             <rect>
-             <x>510</x>
-             <y>30</y>
-             <width>211</width>
-             <height>20</height>
+             <x>511</x>
+             <y>32</y>
+             <width>201</width>
+             <height>24</height>
             </rect>
            </property>
            <property name="font">
@@ -2107,9 +2114,9 @@
            <property name="geometry">
             <rect>
              <x>730</x>
-             <y>30</y>
-             <width>61</width>
-             <height>20</height>
+             <y>34</y>
+             <width>51</width>
+             <height>19</height>
             </rect>
            </property>
            <property name="font">
@@ -2124,10 +2131,10 @@
           <widget class="QLineEdit" name="lineEdit_25">
            <property name="geometry">
             <rect>
-             <x>510</x>
-             <y>61</y>
-             <width>211</width>
-             <height>20</height>
+             <x>511</x>
+             <y>91</y>
+             <width>201</width>
+             <height>23</height>
             </rect>
            </property>
            <property name="font">
@@ -2143,9 +2150,9 @@
            <property name="geometry">
             <rect>
              <x>730</x>
-             <y>62</y>
-             <width>61</width>
-             <height>20</height>
+             <y>92</y>
+             <width>42</width>
+             <height>19</height>
             </rect>
            </property>
            <property name="font">
@@ -2160,10 +2167,10 @@
           <widget class="QLineEdit" name="lineEdit_26">
            <property name="geometry">
             <rect>
-             <x>510</x>
-             <y>90</y>
-             <width>211</width>
-             <height>20</height>
+             <x>511</x>
+             <y>62</y>
+             <width>201</width>
+             <height>23</height>
             </rect>
            </property>
            <property name="font">
@@ -2175,10 +2182,10 @@
           <widget class="QLabel" name="label_33">
            <property name="geometry">
             <rect>
-             <x>230</x>
-             <y>94</y>
-             <width>61</width>
-             <height>20</height>
+             <x>250</x>
+             <y>92</y>
+             <width>50</width>
+             <height>19</height>
             </rect>
            </property>
            <property name="font">
@@ -2193,10 +2200,10 @@
           <widget class="QLabel" name="label_34">
            <property name="geometry">
             <rect>
-             <x>230</x>
-             <y>129</y>
-             <width>61</width>
-             <height>20</height>
+             <x>250</x>
+             <y>121</y>
+             <width>26</width>
+             <height>19</height>
             </rect>
            </property>
            <property name="font">
@@ -2211,10 +2218,10 @@
           <widget class="QLabel" name="label_35">
            <property name="geometry">
             <rect>
-             <x>230</x>
-             <y>165</y>
-             <width>61</width>
-             <height>20</height>
+             <x>250</x>
+             <y>151</y>
+             <width>34</width>
+             <height>19</height>
             </rect>
            </property>
            <property name="font">
@@ -2229,10 +2236,10 @@
           <widget class="QLineEdit" name="lineEdit_27">
            <property name="geometry">
             <rect>
-             <x>30</x>
-             <y>30</y>
-             <width>191</width>
-             <height>20</height>
+             <x>32</x>
+             <y>32</y>
+             <width>201</width>
+             <height>24</height>
             </rect>
            </property>
            <property name="font">
@@ -2247,10 +2254,10 @@
           <widget class="QLabel" name="label_36">
            <property name="geometry">
             <rect>
-             <x>220</x>
-             <y>196</y>
-             <width>71</width>
-             <height>20</height>
+             <x>250</x>
+             <y>180</y>
+             <width>32</width>
+             <height>19</height>
             </rect>
            </property>
            <property name="font">
@@ -2266,9 +2273,9 @@
            <property name="geometry">
             <rect>
              <x>730</x>
-             <y>94</y>
-             <width>61</width>
-             <height>20</height>
+             <y>63</y>
+             <width>48</width>
+             <height>19</height>
             </rect>
            </property>
            <property name="font">
@@ -2283,10 +2290,10 @@
           <widget class="QLineEdit" name="lineEdit_28">
            <property name="geometry">
             <rect>
-             <x>30</x>
-             <y>61</y>
-             <width>191</width>
-             <height>20</height>
+             <x>32</x>
+             <y>62</y>
+             <width>201</width>
+             <height>23</height>
             </rect>
            </property>
            <property name="font">
@@ -2301,10 +2308,10 @@
           <widget class="QLineEdit" name="lineEdit_29">
            <property name="geometry">
             <rect>
-             <x>30</x>
-             <y>94</y>
-             <width>191</width>
-             <height>19</height>
+             <x>32</x>
+             <y>91</y>
+             <width>201</width>
+             <height>23</height>
             </rect>
            </property>
            <property name="font">
@@ -2319,10 +2326,10 @@
           <widget class="QLabel" name="label_38">
            <property name="geometry">
             <rect>
-             <x>750</x>
-             <y>129</y>
-             <width>41</width>
-             <height>20</height>
+             <x>730</x>
+             <y>121</y>
+             <width>39</width>
+             <height>19</height>
             </rect>
            </property>
            <property name="font">
@@ -2337,10 +2344,10 @@
           <widget class="QLabel" name="label_39">
            <property name="geometry">
             <rect>
-             <x>750</x>
-             <y>165</y>
-             <width>41</width>
-             <height>20</height>
+             <x>730</x>
+             <y>151</y>
+             <width>31</width>
+             <height>19</height>
             </rect>
            </property>
            <property name="font">
@@ -2355,10 +2362,10 @@
           <widget class="QLabel" name="label_40">
            <property name="geometry">
             <rect>
-             <x>240</x>
-             <y>30</y>
-             <width>51</width>
-             <height>20</height>
+             <x>250</x>
+             <y>34</y>
+             <width>43</width>
+             <height>19</height>
             </rect>
            </property>
            <property name="font">
@@ -2374,9 +2381,9 @@
            <property name="geometry">
             <rect>
              <x>250</x>
-             <y>62</y>
-             <width>41</width>
-             <height>20</height>
+             <y>63</y>
+             <width>26</width>
+             <height>19</height>
             </rect>
            </property>
            <property name="font">
@@ -2392,9 +2399,9 @@
            <property name="geometry">
             <rect>
              <x>730</x>
-             <y>196</y>
-             <width>61</width>
-             <height>20</height>
+             <y>180</y>
+             <width>28</width>
+             <height>19</height>
             </rect>
            </property>
            <property name="font">
@@ -2409,10 +2416,10 @@
           <widget class="QLineEdit" name="lineEdit_30">
            <property name="geometry">
             <rect>
-             <x>30</x>
-             <y>130</y>
-             <width>191</width>
-             <height>20</height>
+             <x>32</x>
+             <y>120</y>
+             <width>201</width>
+             <height>23</height>
             </rect>
            </property>
            <property name="font">
@@ -2427,10 +2434,10 @@
           <widget class="QLineEdit" name="lineEdit_31">
            <property name="geometry">
             <rect>
-             <x>30</x>
-             <y>164</y>
-             <width>191</width>
-             <height>20</height>
+             <x>32</x>
+             <y>149</y>
+             <width>201</width>
+             <height>23</height>
             </rect>
            </property>
            <property name="font">
@@ -2445,10 +2452,10 @@
           <widget class="QDateEdit" name="dateEdit_4">
            <property name="geometry">
             <rect>
-             <x>30</x>
-             <y>197</y>
-             <width>191</width>
-             <height>22</height>
+             <x>32</x>
+             <y>178</y>
+             <width>201</width>
+             <height>23</height>
             </rect>
            </property>
            <property name="layoutDirection">
@@ -2467,10 +2474,10 @@
           <widget class="QComboBox" name="comboBox_4">
            <property name="geometry">
             <rect>
-             <x>510</x>
-             <y>130</y>
-             <width>211</width>
-             <height>20</height>
+             <x>511</x>
+             <y>120</y>
+             <width>201</width>
+             <height>23</height>
             </rect>
            </property>
            <property name="font">
@@ -2482,10 +2489,10 @@
           <widget class="QComboBox" name="comboBox_5">
            <property name="geometry">
             <rect>
-             <x>510</x>
-             <y>164</y>
-             <width>211</width>
-             <height>20</height>
+             <x>511</x>
+             <y>149</y>
+             <width>201</width>
+             <height>23</height>
             </rect>
            </property>
            <property name="font">
@@ -2497,10 +2504,10 @@
           <widget class="QComboBox" name="comboBox_6">
            <property name="geometry">
             <rect>
-             <x>510</x>
-             <y>197</y>
-             <width>211</width>
-             <height>20</height>
+             <x>511</x>
+             <y>178</y>
+             <width>201</width>
+             <height>23</height>
             </rect>
            </property>
            <property name="font">
@@ -2517,9 +2524,9 @@
           <property name="geometry">
            <rect>
             <x>10</x>
-            <y>280</y>
+            <y>283</y>
             <width>951</width>
-            <height>171</height>
+            <height>201</height>
            </rect>
           </property>
           <property name="font">
@@ -3667,7 +3674,7 @@
          <enum>Qt::ClickFocus</enum>
         </property>
         <property name="currentIndex">
-         <number>0</number>
+         <number>1</number>
         </property>
         <widget class="QWidget" name="tab_9">
          <attribute name="title">
@@ -8711,7 +8718,7 @@
          </rect>
         </property>
         <property name="currentIndex">
-         <number>0</number>
+         <number>3</number>
         </property>
         <widget class="QWidget" name="tab_17">
          <attribute name="title">
@@ -9475,7 +9482,7 @@
      <x>0</x>
      <y>0</y>
      <width>1075</width>
-     <height>21</height>
+     <height>38</height>
     </rect>
    </property>
   </widget>
