--- a/market.ui
+++ b/market.ui
@@ -7214,6 +7214,9 @@
            <pointsize>14</pointsize>
           </font>
          </property>
+         <property name="text">
+          <string/>
+         </property>
          <property name="alignment">
           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
          </property>
