--- a/market.ui
+++ b/market.ui
@@ -49,7 +49,7 @@
        <enum>Qt::RightToLeft</enum>
       </property>
       <property name="currentIndex">
-       <number>3</number>
+       <number>6</number>
       </property>
       <property name="elideMode">
        <enum>Qt::ElideNone</enum>
@@ -8759,7 +8759,7 @@
          </rect>
         </property>
         <property name="currentIndex">
-         <number>1</number>
+         <number>3</number>
         </property>
         <widget class="QWidget" name="tab_17">
          <attribute name="title">
@@ -9438,7 +9438,7 @@
            </font>
           </property>
           <property name="text">
-           <string>مصروفات</string>
+           <string>خصومات</string>
           </property>
          </widget>
          <widget class="QLabel" name="label_137">
