--- a/market.ui
+++ b/market.ui
@@ -9009,9 +9009,9 @@
           <property name="geometry">
            <rect>
             <x>0</x>
-            <y>90</y>
+            <y>70</y>
             <width>961</width>
-            <height>361</height>
+            <height>331</height>
            </rect>
           </property>
           <property name="font">
@@ -9069,7 +9069,7 @@
           </property>
           <property name="geometry">
            <rect>
-            <x>370</x>
+            <x>430</x>
             <y>20</y>
             <width>151</width>
             <height>38</height>
@@ -9082,6 +9082,75 @@
           </property>
           <property name="text">
            <string>اكثر الأصناف مبيعا</string>
+          </property>
+         </widget>
+         <widget class="QLabel" name="label_77">
+          <property name="geometry">
+           <rect>
+            <x>830</x>
+            <y>420</y>
+            <width>111</width>
+            <height>21</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string>إجمالي المبيعات</string>
+          </property>
+         </widget>
+         <widget class="QLineEdit" name="lineEdit_33">
+          <property name="geometry">
+           <rect>
+            <x>670</x>
+            <y>419</y>
+            <width>151</width>
+            <height>25</height>
+           </rect>
+          </property>
+         </widget>
+         <widget class="QLabel" name="label_80">
+          <property name="geometry">
+           <rect>
+            <x>500</x>
+            <y>420</y>
+            <width>131</width>
+            <height>21</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string>إجمالي المشتريات</string>
+          </property>
+         </widget>
+         <widget class="QLineEdit" name="lineEdit_34">
+          <property name="geometry">
+           <rect>
+            <x>340</x>
+            <y>419</y>
+            <width>151</width>
+            <height>25</height>
+           </rect>
+          </property>
+         </widget>
+         <widget class="QLineEdit" name="lineEdit_39">
+          <property name="geometry">
+           <rect>
+            <x>30</x>
+            <y>420</y>
+            <width>151</width>
+            <height>25</height>
+           </rect>
+          </property>
+         </widget>
+         <widget class="QLabel" name="label_81">
+          <property name="geometry">
+           <rect>
+            <x>190</x>
+            <y>421</y>
+            <width>111</width>
+            <height>21</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string>إجمالي الأرباح</string>
           </property>
          </widget>
         </widget>
@@ -9322,7 +9391,7 @@
           </property>
           <property name="geometry">
            <rect>
-            <x>380</x>
+            <x>390</x>
             <y>200</y>
             <width>201</width>
             <height>41</height>
@@ -9346,7 +9415,7 @@
           </property>
           <property name="geometry">
            <rect>
-            <x>380</x>
+            <x>390</x>
             <y>270</y>
             <width>201</width>
             <height>41</height>
@@ -9487,7 +9556,7 @@
          <widget class="QLabel" name="label_138">
           <property name="geometry">
            <rect>
-            <x>580</x>
+            <x>590</x>
             <y>275</y>
             <width>51</width>
             <height>31</height>
@@ -9505,7 +9574,7 @@
          <widget class="QLabel" name="label_139">
           <property name="geometry">
            <rect>
-            <x>580</x>
+            <x>590</x>
             <y>205</y>
             <width>51</width>
             <height>31</height>
